changed file name

--- a/server/manifest.json
+++ b/server/manifest.json
@@ -3,14 +3,26 @@
   "name": "Omore Chat",
   "icons": [
     {
-      "src": "/images/icecream.png",
+      "src": "/images/icon-192.png",
       "type": "image/png",
       "sizes": "192x192"
+    },
+    {
+      "src": "/images/icon-512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": "/",
   "background_color": "#3367D6",
-  "display": "standalone",
+  "display": "fullscreen",
   "scope": "/",
-  "theme_color": "#3367D6"
+  "theme_color": "#3367D6",
+  "prefer_related_applications": true,
+  "related_applications": [
+  {
+    "platform": "play",
+    "id": "com.google.samples.apps.iosched"
+  }
+]
 }
