changed filename server.js

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "omore",
   "version": "1.0.0",
   "description": "chat app",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/key-er/omore#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "mongoose": "^5.3.13",
     "path": "^0.12.7",
     "socket.io": "^2.1.1"
   }
