--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.4",
     "mongoose": "^5.3.13",
     "path": "^0.12.7",
+    "request": "^2.88.0",
     "socket.io": "^2.1.1"
   }
 }
